--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,6 +22,44 @@
   publisher={American Association of Physics Teachers,}
 }
 
+@article {GGK1,
+  AUTHOR = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
+  TITLE = {On a family of negative curves},
+  JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+  VOLUME = {223},
+  YEAR = {2019},
+  NUMBER = {11},
+  PAGES = {4871--4887},
+  ISSN = {0022-4049},
+  MRCLASS = {14C20 (13A30 14E30 14M25 52B20)},
+  MRNUMBER = {3955045},
+  DOI = {10.1016/j.jpaa.2019.02.019},
+  URL = {https://doi.org/10.1016/j.jpaa.2019.02.019},
+}
+
+@article {GGK2,
+	AUTHOR = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
+	TITLE = {Constructing non-{M}ori {D}ream {S}paces from negative curves},
+	JOURNAL = {J. Algebra},
+	FJOURNAL = {Journal of Algebra},
+	VOLUME = {539},
+	YEAR = {2019},
+	PAGES = {118--137},
+	ISSN = {0021-8693},
+	MRCLASS = {Prelim},
+	MRNUMBER = {3995238},
+	DOI = {10.1016/j.jalgebra.2019.08.005},
+	URL = {https://doi.org/10.1016/j.jalgebra.2019.08.005},
+}
+
+@article{GGK3,
+  title={Curves generating extremal rays in blowups of weighted projective planes},
+  author={Gonz{\'a}lez-Anaya, Javier and Gonz{\'a}lez, Jos{\'e} Luis and Karu, Kalle},
+  journal={arXiv preprint arXiv:2002.07123},
+  year={2020}
+}
+
 @article{PhysRev.47.777,
   abbr={PhysRev},
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
