--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -102,7 +102,7 @@
 }
 
 @article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
+  title={On the electrodynamics of moving bodies TST TESTSTEST},
   author={Einstein, A.},
   year={1905}
 }
