--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,7 +35,7 @@
   MRCLASS = {14C20 (13A30 14E30 14M25 52B20)},
   MRNUMBER = {3955045},
   DOI = {10.1016/j.jpaa.2019.02.019},
-  URL = {https://doi.org/10.1016/j.jpaa.2019.02.019},
+  URL = {https://doi.org/10.1016/j.jpaa.2019.02.019}
 }
 
 @article {GGK2,
@@ -50,7 +50,7 @@
 	MRCLASS = {Prelim},
 	MRNUMBER = {3995238},
 	DOI = {10.1016/j.jalgebra.2019.08.005},
-	URL = {https://doi.org/10.1016/j.jalgebra.2019.08.005},
+	URL = {https://doi.org/10.1016/j.jalgebra.2019.08.005}
 }
 
 @article{GGK3,
