--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,34 +23,34 @@
 }
 
 @article {GGK1,
-  AUTHOR = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
-  TITLE = {On a family of negative curves},
-  JOURNAL = {J. Pure Appl. Algebra},
-  FJOURNAL = {Journal of Pure and Applied Algebra},
-  VOLUME = {223},
-  YEAR = {2019},
-  NUMBER = {11},
-  PAGES = {4871--4887},
-  ISSN = {0022-4049},
-  MRCLASS = {14C20 (13A30 14E30 14M25 52B20)},
-  MRNUMBER = {3955045},
-  DOI = {10.1016/j.jpaa.2019.02.019},
-  URL = {https://doi.org/10.1016/j.jpaa.2019.02.019}
+  author = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
+  title = {On a family of negative curves},
+  journal = {J. Pure Appl. Algebra},
+  fjournal = {Journal of Pure and Applied Algebra},
+  volume = {223},
+  year = {2019},
+  number = {11},
+  pages = {4871--4887},
+  issn = {0022-4049},
+  mrclass = {14C20 (13A30 14E30 14M25 52B20)},
+  mrnumber = {3955045},
+  doi = {10.1016/j.jpaa.2019.02.019},
+  url = {https://doi.org/10.1016/j.jpaa.2019.02.019}
 }
 
 @article {GGK2,
-	AUTHOR = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
-	TITLE = {Constructing non-{M}ori {D}ream {S}paces from negative curves},
-	JOURNAL = {J. Algebra},
-	FJOURNAL = {Journal of Algebra},
-	VOLUME = {539},
-	YEAR = {2019},
-	PAGES = {118--137},
-	ISSN = {0021-8693},
-	MRCLASS = {Prelim},
-	MRNUMBER = {3995238},
-	DOI = {10.1016/j.jalgebra.2019.08.005},
-	URL = {https://doi.org/10.1016/j.jalgebra.2019.08.005}
+  author = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
+  title = {Constructing non-{M}ori {D}ream {S}paces from negative curves},
+  journal = {J. Algebra},
+  fjournal = {Journal of Algebra},
+  volume = {539},
+  year = {2019},
+  pages = {118--137},
+  issn = {0021-8693},
+  mrclass = {Prelim},
+  mrnumber = {3995238},
+  doi = {10.1016/j.jalgebra.2019.08.005},
+  url = {https://doi.org/10.1016/j.jalgebra.2019.08.005}
 }
 
 @article{GGK3,
