--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,50 +22,12 @@
   publisher={American Association of Physics Teachers,}
 }
 
-@article {GGK1,
-  author = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
-  title = {On a family of negative curves},
-  journal = {J. Pure Appl. Algebra},
-  fjournal = {Journal of Pure and Applied Algebra},
-  volume = {223},
-  year = {2019},
-  number = {11},
-  pages = {4871--4887},
-  issn = {0022-4049},
-  mrclass = {14C20 (13A30 14E30 14M25 52B20)},
-  mrnumber = {3955045},
-  doi = {10.1016/j.jpaa.2019.02.019},
-  url = {https://doi.org/10.1016/j.jpaa.2019.02.019}
-}
-
-@article {GGK2,
-  author = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
-  title = {Constructing non-{M}ori {D}ream {S}paces from negative curves},
-  journal = {J. Algebra},
-  fjournal = {Journal of Algebra},
-  volume = {539},
-  year = {2019},
-  pages = {118--137},
-  issn = {0021-8693},
-  mrclass = {Prelim},
-  mrnumber = {3995238},
-  doi = {10.1016/j.jalgebra.2019.08.005},
-  url = {https://doi.org/10.1016/j.jalgebra.2019.08.005}
-}
-
-@article{GGK3,
-  title={Curves generating extremal rays in blowups of weighted projective planes},
-  author={Gonz{\'a}lez-Anaya, Javier and Gonz{\'a}lez, Jos{\'e} Luis and Karu, Kalle},
-  journal={arXiv preprint arXiv:2002.07123},
-  year={2020}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
+@article{GGK1,
+  abbr={JPAA},
+  title={On a family of negative curves},
+  author= {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
   abstract={Let X be the blowup of a weighted projective plane at a general point. We study the problem of finite generation of the Cox ring of X. Generalizing examples of Srinivasan and Kurano-Nishida, we consider examples of X that contain a negative curve of the class H-mE, where H is the class of a divisor pulled back from the weighted projective plane and E is the class of the exceptional curve. For any m>0 we construct examples where the Cox ring is finitely generated and examples where it is not.},
-  journal={Journal of Pure and Applied Algebra,},
+  journal={J. Pure Appl. Algebra,},
   volume={223},
   issue={11},
   pages={4871--4887},
