--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{GGK1,
-  abbr={JPAA},
+  abbr={J. Pure Appl. Algebra},
   title={On a family of negative curves},
   author= {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
   abstract={Let X be the blowup of a weighted projective plane at a general point. We study the problem of finite generation of the Cox ring of X. Generalizing examples of Srinivasan and Kurano-Nishida, we consider examples of X that contain a negative curve of the class H-mE, where H is the class of a divisor pulled back from the weighted projective plane and E is the class of the exceptional curve. For any m>0 we construct examples where the Cox ring is finitely generated and examples where it is not.},
@@ -14,11 +14,43 @@
   year={2019},
   month={November},
   publisher=aps,
-  doi={10.1016/j.jpaa.2019.02.019},
-  url={https://doi.org/10.1016/j.jpaa.2019.02.019},
+  doi={https://doi.org/10.1016/j.jpaa.2019.02.019},
+  url={https://www.sciencedirect.com/science/article/pii/S0022404919300532},
   pdf={example_pdf.pdf},
   selected={true}
 }
 
+@article{GGK2,
+abbr={J. Algebra},
+author = {Javier {González Anaya} and José Luis González and Kalle Karu},
+title = {Constructing non-Mori Dream Spaces from negative curves},
+journal = {Journal of Algebra},
+volume = {539},
+pages = {118-137},
+year = {2019},
+month={December},
+issn = {0021-8693},
+doi = {https://doi.org/10.1016/j.jalgebra.2019.08.005},
+url = {https://www.sciencedirect.com/science/article/pii/S0021869319304478},
+keywords = {Cox rings, Mori Dream Spaces, Toric varieties, Weighted projective planes, Symbolic Rees algebras},
+abstract = {We study blowups of weighted projective planes at a general point, and more generally blowups of toric surfaces of Picard number one. Based on the positive characteristic methods of Kurano and Nishida, we give a general method for constructing examples of Mori Dream Spaces and non-Mori Dream Spaces among such blowups. Compared to previous constructions, this method uses the geometric properties of the varieties and applies to a number of cases. We use it to fully classify the examples coming from two families of negative curves.},
+pdf={example_pdf.pdf},
+selected={true}
+}
 
+
+@online{GGK4,
+  author       = {Javier {González Anaya} and José Luis González and Kalle Karu},
+  title        = {The geography of negative curves},
+  year         = {2021},
+  month        = {April},
+  version      = 1,
+  eprinttype   = {arXiv},
+  eprint       = {2104.03950},
+  eprintclass  = {math.AG},
+  url          = {https://arxiv.org/abs/2104.03950},
+  abstract = {We study the Mori Dream Space (MDS) property for blowups of weighted projective planes at a general point and, more generally, blowups of toric surfaces defined by a rational plane triangle. The birational geometry of these varieties is largely governed by the existence of a negative curve in them, different from the exceptional curve of the blowup.
+We consider a parameter space of all rational triangles, and within this space we study how the negative curves and the MDS property vary. One goal of the article is to catalogue all known negative curves and show their location in the parameter space. In addition to the previously known examples we construct two new families of negative curves. One of them is, to our knowledge, the first infinite family of special negative curves.
+The second goal of the article is to show that the knowledge of negative curves in the parameter space often determines the MDS property. We show that in many cases this is the only underlying mechanism responsible for the MDS property.},
+}
 
