added CV and updated list of papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,6 +38,20 @@ abstract = {We study blowups of weighted projective planes at a general point, a
 selected={true}
 }
 
+@article{GGK5,
+  author       = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
+  title        = {Non-existence of negative curves},
+  year         = {2021},
+  month        = {October},
+  version      = 1,
+  journal      = {Preprint.},
+  eprinttype   = {arXiv},
+  arxiv        = {2110.13333},
+  eprintclass  = {math.AG},
+  url          = {https://arxiv.org/abs/2110.13333},
+  abstract = {Let  X be a projective toric surface of Picard number one blown up at a general point. We bring an infinite family of examples of such X whose Kleiman-Mori cone of curves is not closed: there is no negative curve generating one of the two boundary rays of the cone. These examples are related to Nagata's conjecture and rationality of Seshadri constants.}
+}
+
 @article{GGK4,
   author       = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
   title        = {The geography of negative curves},
@@ -60,10 +74,12 @@ abbr={JLMS},
 author= {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
 title = {Curves generating extremal rays in blowups of weighted projective planes},
 note = {To appear in J. Lond. Math. Soc.},
-journal = {To appear in the J. Lond. Math. Soc.},
-year = {2021},
-month={February},
-arxiv = {2002.07123},
+  journal={Journal of the London Mathematical Society},
+  volume={104},
+  number={3},
+  pages={1342--1362},
+  year={2021},
+  publisher={Wiley Online Library},
 abstract = {We consider blowups at a general point of weighted projective planes and, more generally, of toric surfaces with Picard number one. We give a unifying construction of negative curves on these blowups such that all previously known families appear as boundary cases of this. The classification consists of two classes of said curves, each depending on two parameters. Every curve in these two classes is algebraically related to other curves in both classes; this allows us to find their defining equations inductively. For each curve in our classification, we consider a family of blowups in which the curve defines an extremal class in the effective cone. We give a complete classification of these blowups into Mori Dream Spaces and non-Mori Dream Spaces. Our approach greatly simplifies previous proofs, avoiding positive characteristic methods and higher cohomology.},
 selected={true}
 }
