--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -74,12 +74,13 @@ abbr={JLMS},
 author= {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
 title = {Curves generating extremal rays in blowups of weighted projective planes},
 note = {To appear in J. Lond. Math. Soc.},
-  journal={Journal of the London Mathematical Society},
-  volume={104},
-  number={3},
-  pages={1342--1362},
-  year={2021},
-  publisher={Wiley Online Library},
+journal={Journal of the London Mathematical Society},
+volume={104},
+number={3},
+pages={1342--1362},
+year={2021},
+publisher={Wiley Online Library},
+arxiv={2002.07123},
 abstract = {We consider blowups at a general point of weighted projective planes and, more generally, of toric surfaces with Picard number one. We give a unifying construction of negative curves on these blowups such that all previously known families appear as boundary cases of this. The classification consists of two classes of said curves, each depending on two parameters. Every curve in these two classes is algebraically related to other curves in both classes; this allows us to find their defining equations inductively. For each curve in our classification, we consider a family of blowups in which the curve defines an extremal class in the effective cone. We give a complete classification of these blowups into Mori Dream Spaces and non-Mori Dream Spaces. Our approach greatly simplifies previous proofs, avoiding positive characteristic methods and higher cohomology.},
 selected={true}
 }
