--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
   arxiv = {1712.04635},
   doi={https://doi.org/10.1016/j.jpaa.2019.02.019},
   url={https://www.sciencedirect.com/science/article/pii/S0022404919300532},
-  selected={true}
+  %selected={true}
 }
 
 @article{GGK2,
@@ -35,7 +35,7 @@ doi = {https://doi.org/10.1016/j.jalgebra.2019.08.005},
 url = {https://www.sciencedirect.com/science/article/pii/S0021869319304478},
 keywords = {Cox rings, Mori Dream Spaces, Toric varieties, Weighted projective planes, Symbolic Rees algebras},
 abstract = {We study blowups of weighted projective planes at a general point, and more generally blowups of toric surfaces of Picard number one. Based on the positive characteristic methods of Kurano and Nishida, we give a general method for constructing examples of Mori Dream Spaces and non-Mori Dream Spaces among such blowups. Compared to previous constructions, this method uses the geometric properties of the varieties and applies to a number of cases. We use it to fully classify the examples coming from two families of negative curves.},
-selected={true}
+%selected={true}
 }
 
 @article{GGK5,
@@ -44,22 +44,21 @@ selected={true}
   year         = {2021},
   month        = {October},
   version      = 1,
-  journal      = {To appear in IMRN.},
+  journal      = {To appear in IMRN. Preprint},
   eprinttype   = {arXiv},
   arxiv        = {2110.13333},
   eprintclass  = {math.AG},
   url          = {https://arxiv.org/abs/2110.13333},
   abstract = {Let  X be a projective toric surface of Picard number one blown up at a general point. We bring an infinite family of examples of such X whose Kleiman-Mori cone of curves is not closed: there is no negative curve generating one of the two boundary rays of the cone. These examples are related to Nagata's conjecture and rationality of Seshadri constants.}
-  selected={true}
 }
 
 @article{GGK4,
   author       = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
   title        = {The geography of negative curves},
-  year         = {2021},
+  year         = 2021,
   month        = {April},
   version      = 1,
-  journal      = {Preprint. Very positive referee report at the Michigan Mathematical Journal - Revised version under review.},
+  journal      = {Very positive referee report at the Michigan Mathematical Journal - Revised version under review. Preprint},
   eprinttype   = {arXiv},
   arxiv        = {2104.03950},
   eprintclass  = {math.AG},
@@ -67,7 +66,6 @@ selected={true}
   abstract = {We study the Mori Dream Space (MDS) property for blowups of weighted projective planes at a general point and, more generally, blowups of toric surfaces defined by a rational plane triangle. The birational geometry of these varieties is largely governed by the existence of a negative curve in them, different from the exceptional curve of the blowup.
 We consider a parameter space of all rational triangles, and within this space we study how the negative curves and the MDS property vary. One goal of the article is to catalogue all known negative curves and show their location in the parameter space. In addition to the previously known examples we construct two new families of negative curves. One of them is, to our knowledge, the first infinite family of special negative curves.
 The second goal of the article is to show that the knowledge of negative curves in the parameter space often determines the MDS property. We show that in many cases this is the only underlying mechanism responsible for the MDS property.}
-  selected={true}
 }
 
 @article{GGK3,
@@ -82,12 +80,12 @@ year={2021},
 publisher={Wiley Online Library},
 arxiv={2002.07123},
 abstract = {We consider blowups at a general point of weighted projective planes and, more generally, of toric surfaces with Picard number one. We give a unifying construction of negative curves on these blowups such that all previously known families appear as boundary cases of this. The classification consists of two classes of said curves, each depending on two parameters. Every curve in these two classes is algebraically related to other curves in both classes; this allows us to find their defining equations inductively. For each curve in our classification, we consider a family of blowups in which the curve defines an extremal class in the effective cone. We give a complete classification of these blowups into Mori Dream Spaces and non-Mori Dream Spaces. Our approach greatly simplifies previous proofs, avoiding positive characteristic methods and higher cohomology.},
-selected={true}
+%selected={true}
 }
 
 @article{LATINX,
   title={Enumeration of max-pooling responses with generalized permutohedra},
-  author={Escobar, Laura and Gallardo, Patricio and Gonz{\'a}lez-Anaya, Javier and Gonz{\'a}lez, Jos{\'e} L and Mont{\'u}far, Guido and Morales, Alejandro H},
+  author={Escobar, Laura and Gallardo, Patricio and Gonz{\'a}lez Anaya, Javier and Gonz{\'a}lez, Jos{\'e} L and Mont{\'u}far, Guido and Morales, Alejandro H},
   year         = {2022},
   month        = {September},
   version      = 1,
@@ -97,7 +95,7 @@ selected={true}
   eprintclass  = {math.CO},
   url          = {https://arxiv.org/abs/2104.03950},
   abstract = {We investigate the combinatorics of max-pooling layers, which are functions that downsample input arrays by taking the maximum over shifted windows of input coordinates, and which are commonly used in convolutional neural networks. We obtain results on the number of linearity regions of these functions by equivalently counting the number of vertices of certain Minkowski sums of simplices. We characterize the faces of such polytopes and obtain generating functions and closed formulas for the number of vertices and facets in a 1D max-pooling layer depending on the size of the pooling windows and stride, and for the number of vertices in a special case of 2D max-pooling.}
-  selected={true}
+
 }
 
 
