update bib and about

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,23 +48,10 @@ abstract = {We study blowups of weighted projective planes at a general point, a
     issn = {1073-7928},
     doi = {10.1093/imrn/rnac355},
     url = {https://doi.org/10.1093/imrn/rnac355},
+    arxiv={2110.13333},
     note = {rnac355},
     eprint = {https://academic.oup.com/imrn/advance-article-pdf/doi/10.1093/imrn/rnac355/48497644/rnac355.pdf},
 }
-
-@Comment @article{GGK5,
-@Comment   author       = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
-@Comment   title        = {Non-existence of negative curves},
-@Comment   year         = {2021},
-@Comment   month        = {October},
-@Comment   version      = 1,
-@Comment   journal      = {To appear in IMRN. Preprint},
-@Comment   eprinttype   = {arXiv},
-@Comment   arxiv        = {2110.13333},
-@Comment   eprintclass  = {math.AG},
-@Comment   url          = {https://arxiv.org/abs/2110.13333},
-@Comment   abstract = {Let  X be a projective toric surface of Picard number one blown up at a general point. We bring an infinite family of examples of such X whose Kleiman-Mori cone of curves is not closed: there is no negative curve generating one of the two boundary rays of the cone. These examples are related to Nagata's conjecture and rationality of Seshadri constants.}
-@Comment }
 
 @article{GGK4,
   author       = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
@@ -72,7 +59,7 @@ abstract = {We study blowups of weighted projective planes at a general point, a
   year         = 2021,
   month        = {April},
   version      = 1,
-  journal      = {To appear at the Michigan Mathematical Journal. Preprint},
+  journal      = {Accepted. To appear in the Michigan Mathematical Journal.},
   eprinttype   = {arXiv},
   arxiv        = {2104.03950},
   eprintclass  = {math.AG},
