--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,44 +1,36 @@
 ---
 ---
 
-@article{GGK1,
-  abbr={JPAA},
-  title={On a family of negative curves},
-  author= {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
-  abstract={Let X be the blowup of a weighted projective plane at a general point. We study the problem of finite generation of the Cox ring of X. Generalizing examples of Srinivasan and Kurano-Nishida, we consider examples of X that contain a negative curve of the class H-mE, where H is the class of a divisor pulled back from the weighted projective plane and E is the class of the exceptional curve. For any m>0 we construct examples where the Cox ring is finitely generated and examples where it is not.},
-  journal={J. Pure Appl. Algebra,},
-  volume={223},
-  issue={11},
-  pages={4871--4887},
-  numpages={0},
-  year={2019},
-  month={November},
-  publisher=aps,
-  arxiv = {1712.04635},
-  doi={https://doi.org/10.1016/j.jpaa.2019.02.019},
-  url={https://www.sciencedirect.com/science/article/pii/S0022404919300532},
-  %selected={true}
+@article{higherLM,
+  title={{Higher-dimensional Losev-Manin spaces and their geometry}},
+  author={Gallardo, Patricio and Gonz{\'a}lez-Anaya, Javier and Gonz{\'a}lez, Jos{\'e} Luis and Routis, Evangelos},
+  year={2023},
+  month = {August},
+  version  = 1,
+  journal  = {Submitted.},
+  eprinttype   = {arXiv},
+  arxiv        = {2308.07911},
+  eprintclass  = {math.AG},
+  url          = {https://arxiv.org/abs/2308.07911},
+  abstract = {The classical Losev-Manin space can be interpreted as a toric compactification of the moduli space of n points in the affine line modulo translation and scaling. Motivated by this, we study its higher-dimensional toric counterparts, which compactify the moduli space of n distinct labeled points in affine space modulo translation and scaling. We show that these moduli spaces are a fibration over a product of projective spaces---with fibers isomorphic to the Losev-Manin space---and that they are isomorphic to the normalization of a Chow quotient. Moreover, we present a criterion to decide whether the blow-up of a toric variety along the closure of a subtorus is a Mori dream space. As an application, we demonstrate that a related generalization of the moduli space of pointed rational curves proposed by Chen, Gibney, and Krashen is not a Mori dream space when the number of points is at least nine, regardless of the dimension.}
 }
 
-@article{GGK2,
-abbr={J. Algebra},
-author= {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
-title = {Constructing non-Mori Dream Spaces from negative curves},
-journal = {Journal of Algebra},
-volume = {539},
-pages = {118-137},
-year = {2019},
-month={December},
-arxiv = {1810.00508},
-issn = {0021-8693},
-doi = {https://doi.org/10.1016/j.jalgebra.2019.08.005},
-url = {https://www.sciencedirect.com/science/article/pii/S0021869319304478},
-keywords = {Cox rings, Mori Dream Spaces, Toric varieties, Weighted projective planes, Symbolic Rees algebras},
-abstract = {We study blowups of weighted projective planes at a general point, and more generally blowups of toric surfaces of Picard number one. Based on the positive characteristic methods of Kurano and Nishida, we give a general method for constructing examples of Mori Dream Spaces and non-Mori Dream Spaces among such blowups. Compared to previous constructions, this method uses the geometric properties of the varieties and applies to a number of cases. We use it to fully classify the examples coming from two families of negative curves.},
-%selected={true}
+@article{LATINX,
+  title={Enumeration of max-pooling responses with generalized permutohedra},
+  author={Escobar, Laura and Gallardo, Patricio and Gonz{\'a}lez Anaya, Javier and Gonz{\'a}lez, Jos{\'e} L and Mont{\'u}far, Guido and Morales, Alejandro H},
+  year         = {2022},
+  month        = {September},
+  version      = 1,
+  journal      = {Submitted.},
+  eprinttype   = {arXiv},
+  arxiv        = {2209.14978},
+  eprintclass  = {math.CO},
+  url          = {https://arxiv.org/abs/2104.03950},
+  abstract = {We investigate the combinatorics of max-pooling layers, which are functions that downsample input arrays by taking the maximum over shifted windows of input coordinates, and which are commonly used in convolutional neural networks. We obtain results on the number of linearity regions of these functions by equivalently counting the number of vertices of certain Minkowski sums of simplices. We characterize the faces of such polytopes and obtain generating functions and closed formulas for the number of vertices and facets in a 1D max-pooling layer depending on the size of the pooling windows and stride, and for the number of vertices in a special case of 2D max-pooling.}
 }
 
 @article{GGK5,
+    abbr={IMRN},
     author = {González Anaya, Javier and González, José Luis and Karu, Kalle},
     title = "{Nonexistence of Negative Curves}",
     journal = {International Mathematics Research Notices},
@@ -54,17 +46,18 @@ abstract = {We study blowups of weighted projective planes at a general point, a
 }
 
 @article{GGK4,
-  author       = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
-  title        = {The geography of negative curves},
-  year         = 2021,
-  month        = {April},
-  version      = 1,
-  journal      = {Accepted. To appear in the Michigan Mathematical Journal.},
-  eprinttype   = {arXiv},
-  arxiv        = {2104.03950},
-  eprintclass  = {math.AG},
-  url          = {https://arxiv.org/abs/2104.03950},
-  abstract = {We study the Mori Dream Space (MDS) property for blowups of weighted projective planes at a general point and, more generally, blowups of toric surfaces defined by a rational plane triangle. The birational geometry of these varieties is largely governed by the existence of a negative curve in them, different from the exceptional curve of the blowup.
+abbr={MMJ},
+author       = {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
+title        = {The geography of negative curves},
+year         = 2021,
+month        = {April},
+version      = 1,
+journal      = {Accepted. To appear in the Michigan Mathematical Journal.},
+eprinttype   = {arXiv},
+arxiv        = {2104.03950},
+eprintclass  = {math.AG},
+url          = {https://arxiv.org/abs/2104.03950},
+abstract = {We study the Mori Dream Space (MDS) property for blowups of weighted projective planes at a general point and, more generally, blowups of toric surfaces defined by a rational plane triangle. The birational geometry of these varieties is largely governed by the existence of a negative curve in them, different from the exceptional curve of the blowup.
 We consider a parameter space of all rational triangles, and within this space we study how the negative curves and the MDS property vary. One goal of the article is to catalogue all known negative curves and show their location in the parameter space. In addition to the previously known examples we construct two new families of negative curves. One of them is, to our knowledge, the first infinite family of special negative curves.
 The second goal of the article is to show that the knowledge of negative curves in the parameter space often determines the MDS property. We show that in many cases this is the only underlying mechanism responsible for the MDS property.}
 }
@@ -84,19 +77,40 @@ abstract = {We consider blowups at a general point of weighted projective planes
 %selected={true}
 }
 
-@article{LATINX,
-  title={Enumeration of max-pooling responses with generalized permutohedra},
-  author={Escobar, Laura and Gallardo, Patricio and Gonz{\'a}lez Anaya, Javier and Gonz{\'a}lez, Jos{\'e} L and Mont{\'u}far, Guido and Morales, Alejandro H},
-  year         = {2022},
-  month        = {September},
-  version      = 1,
-  journal      = {Preprint.},
-  eprinttype   = {arXiv},
-  arxiv        = {2209.14978},
-  eprintclass  = {math.CO},
-  url          = {https://arxiv.org/abs/2104.03950},
-  abstract = {We investigate the combinatorics of max-pooling layers, which are functions that downsample input arrays by taking the maximum over shifted windows of input coordinates, and which are commonly used in convolutional neural networks. We obtain results on the number of linearity regions of these functions by equivalently counting the number of vertices of certain Minkowski sums of simplices. We characterize the faces of such polytopes and obtain generating functions and closed formulas for the number of vertices and facets in a 1D max-pooling layer depending on the size of the pooling windows and stride, and for the number of vertices in a special case of 2D max-pooling.}
 
+@article{GGK2,
+abbr={J. Algebra},
+author= {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
+title = {Constructing non-Mori Dream Spaces from negative curves},
+journal = {Journal of Algebra},
+volume = {539},
+pages = {118-137},
+year = {2019},
+month={December},
+arxiv = {1810.00508},
+issn = {0021-8693},
+doi = {https://doi.org/10.1016/j.jalgebra.2019.08.005},
+url = {https://www.sciencedirect.com/science/article/pii/S0021869319304478},
+keywords = {Cox rings, Mori Dream Spaces, Toric varieties, Weighted projective planes, Symbolic Rees algebras},
+abstract = {We study blowups of weighted projective planes at a general point, and more generally blowups of toric surfaces of Picard number one. Based on the positive characteristic methods of Kurano and Nishida, we give a general method for constructing examples of Mori Dream Spaces and non-Mori Dream Spaces among such blowups. Compared to previous constructions, this method uses the geometric properties of the varieties and applies to a number of cases. We use it to fully classify the examples coming from two families of negative curves.},
+%selected={true}
 }
 
-
+@article{GGK1,
+  abbr={JPAA},
+  title={On a family of negative curves},
+  author= {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
+  abstract={Let X be the blowup of a weighted projective plane at a general point. We study the problem of finite generation of the Cox ring of X. Generalizing examples of Srinivasan and Kurano-Nishida, we consider examples of X that contain a negative curve of the class H-mE, where H is the class of a divisor pulled back from the weighted projective plane and E is the class of the exceptional curve. For any m>0 we construct examples where the Cox ring is finitely generated and examples where it is not.},
+  journal={J. Pure Appl. Algebra,},
+  volume={223},
+  issue={11},
+  pages={4871--4887},
+  numpages={0},
+  year={2019},
+  month={November},
+  publisher=aps,
+  arxiv = {1712.04635},
+  doi={https://doi.org/10.1016/j.jpaa.2019.02.019},
+  url={https://www.sciencedirect.com/science/article/pii/S0022404919300532},
+  %selected={true}
+}
