--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @article{polypaper,
 title={Polymatroids and moduli of points in flags},
-author={Gallardo, Patricio and Gonz{\'a}lez-Anaya, Javier and Gonz{\'a}lez, Jos{\'e} Luis},
+author={Gallardo, Patricio and Gonz{\'a}lez Anaya, Javier and Gonz{\'a}lez, Jos{\'e} Luis},
 year={2024},
 journal = {Submitted.},
 arxiv={2411.06816},
@@ -14,7 +14,7 @@ abstract={We introduce and study different compactifications of the moduli space
 
 @article{bown2024hypergraph,
 title={Hypergraph associahedra and compactifications of moduli spaces of points},
-author={Bown, Jasper and Gonz{\'a}lez-Anaya, Javier},
+author={Bown, Jasper and Gonz{\'a}lez Anaya, Javier},
 year={2024},
 journal = {Submitted.},
 arxiv={2409.08611},
@@ -27,7 +27,7 @@ abstract={We prove that every Hassett compactification of the moduli space of we
 
 @article{higherLM,
   title={{Higher-dimensional Losev-Manin spaces and their geometry}},
-  author={Gallardo, Patricio and Gonz{\'a}lez-Anaya, Javier and Gonz{\'a}lez, Jos{\'e} Luis and Routis, Evangelos},
+  author={Gallardo, Patricio and Gonz{\'a}lez Anaya, Javier and Gonz{\'a}lez, Jos{\'e} Luis and Routis, Evangelos},
   year={2023},
   month = {August},
   version  = 1,
@@ -124,7 +124,7 @@ abstract = {We study blowups of weighted projective planes at a general point, a
   title={On a family of negative curves},
   author= {Gonz\'{a}lez Anaya, Javier and Gonz\'{a}lez, Jos\'{e} Luis and Karu, Kalle},
   abstract={Let X be the blowup of a weighted projective plane at a general point. We study the problem of finite generation of the Cox ring of X. Generalizing examples of Srinivasan and Kurano-Nishida, we consider examples of X that contain a negative curve of the class H-mE, where H is the class of a divisor pulled back from the weighted projective plane and E is the class of the exceptional curve. For any m>0 we construct examples where the Cox ring is finitely generated and examples where it is not.},
-  journal={J. Pure Appl. Algebra,},
+  journal={J. Pure Appl. Algebra},
   volume={223},
   issue={11},
   pages={4871--4887},
