--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,13 @@
 ---
 ---
+@article{pnestohedra,
+title={P-Nestohedra and the moduli space of points in projective space},
+author={Bit, Marwan* and Gonz{\'a}lez Anaya, Javier and Karp, Dagan and Luo, Jenna*},
+year={2024},
+journal = {In preparation.},
+}
+
+
 @article{polypaper,
 title={Polymatroids and moduli of points in flags},
 author={Gallardo, Patricio and Gonz{\'a}lez Anaya, Javier and Gonz{\'a}lez, Jos{\'e} Luis},
@@ -14,7 +22,7 @@ abstract={We introduce and study different compactifications of the moduli space
 
 @article{bown2024hypergraph,
 title={Hypergraph associahedra and compactifications of moduli spaces of points},
-author={Bown, Jasper and Gonz{\'a}lez Anaya, Javier},
+author={Bown, Jasper* and Gonz{\'a}lez Anaya, Javier},
 year={2024},
 journal = {Submitted.},
 arxiv={2409.08611},
